--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/abc_bank
 spring.datasource.username = root
 spring.datasource.password = root
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
-logging.level.root=WARN
-logging.level.com.imaginea=TRACE
+logging.level.root=INFO
+logging.level.com.imaginea=INFO
 
 priority.serveRatio=2:1
 swagger.enable=true
